--- a/.config/powerline/config.json
+++ b/.config/powerline/config.json
@@ -19,7 +19,7 @@
 		},
 		"shell": {
 			"colorscheme": "default",
-			"theme": "default",
+			"theme": "multiline",
 			"local_themes": {
 				"continuation": "continuation",
 				"select": "select"
