--- a/.tmux.conf
+++ b/.tmux.conf
@@ -1,11 +1,20 @@
-new-session
+#new-session
 set -g default-terminal "screen-256color"
 set-option -g default-command "reattach-to-user-namespace -l zsh"
-unbind C-b
-set -g prefix C-s
-bind-key -r s select-pane -t :.+
 
-setw -g mode-mouse on
+set -g base-index 1
+set -g pane-base-index 1
+
+if-shell "$SSH_CONNECTION" '' 'unbind C-b; set -g prefix C-s'
+#unbind C-b
+#set -g prefix C-s
+
+unbind Up
+unbind Down
+unbind Right
+unbind Left
+#setw -g mode-mouse on
+set-option -g -q mouse on
 set -g pane-base-index 1
 set -g status-fg colour255
 set -g status-bg colour160
@@ -21,21 +30,39 @@ bind-key -t vi-copy v begin-selection
 bind-key -t vi-copy y copy-pipe "reattach-to-user-namespace pbcopy"
 unbind -t vi-copy Enter
 bind-key -t vi-copy Enter copy-pipe "reattach-to-user-namespace pbcopy"
+
+bind-key -r s select-pane -t :.+
 bind h select-pane -L
 bind j select-pane -D
 bind k select-pane -U
 bind l select-pane -R
-bind-key -r C-h select-window -t :-
-bind-key -r C-l select-window -t :+
+#bind-key -r C-h select-window -t :-
+#bind-key -r C-l select-window -t :+
 
 # Resize
 bind-key -r J resize-pane -D
 bind-key -r K resize-pane -U
 bind-key -r H resize-pane -L
 bind-key -r L resize-pane -R
-bind-key -r n next-window
+bind-key -r C-k resize-pane -U 5
+bind-key -r C-j resize-pane -D 5
+bind-key -r C-h resize-pane -L 5
+bind-key -r C-l resize-pane -R 5
+
+bind-key -r p next-window
+bind-key -r o previous-window
+unbind-key r
 bind-key r source-file ~/.tmux.conf \; display-message "Configuration reloaded"
 bind \ split-window -h
 bind - split-window -v
 
 source "$POWERLINE_PATH/bindings/tmux/powerline.conf"
+
+set-window-option -g window-style 'bg=#181818'
+set-window-option -g window-active-style 'bg=black'
+bind-key -T root WheelUpPane if-shell -F -t = "#{alternate_on}" "send-keys -M" "select-pane -t =; copy-mode -e; send-keys -M"
+bind-key -T root WheelDownPane if-shell -F -t = "#{alternate_on}" "send-keys -M" "select-pane -t =; send-keys -M"
+bind-key -t vi-copy WheelUpPane halfpage-up
+
+bind-key -t vi-copy WheelDownPane halfpage-down
+#set-window-option -g pane-active-border-style ''
