SSH config for tmux

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -5,7 +5,7 @@ set-option -g default-command "reattach-to-user-namespace -l zsh"
 set -g base-index 1
 set -g pane-base-index 1
 
-if-shell "$SSH_CONNECTION" '' 'unbind C-b; set -g prefix C-s'
+if-shell "[[ -n $SSH_CONNECTION ]]" '' 'unbind C-b; set -g prefix C-s'
 #unbind C-b
 #set -g prefix C-s
 
