--- a/.tmux.conf
+++ b/.tmux.conf
@@ -1,6 +1,7 @@
-#new-session
 set -g default-terminal "screen-256color"
 set-option -g default-command "reattach-to-user-namespace -l zsh"
+set-option -g automatic-rename off
+set-option -g history-limit 5000
 
 set -g base-index 1
 set -g pane-base-index 1
@@ -13,6 +14,8 @@ unbind Up
 unbind Down
 unbind Right
 unbind Left
+
+bind Escape copy-mode
 #setw -g mode-mouse on
 set-option -g -q mouse on
 set -g pane-base-index 1
@@ -30,7 +33,11 @@ bind-key -t vi-copy v begin-selection
 bind-key -t vi-copy y copy-pipe "reattach-to-user-namespace pbcopy"
 unbind -t vi-copy Enter
 bind-key -t vi-copy Enter copy-pipe "reattach-to-user-namespace pbcopy"
+setw -g utf8 on
 
+set -g status-interval 2
+
+bind-key n new-window
 bind-key -r s select-pane -t :.+
 bind h select-pane -L
 bind j select-pane -D
