Transparent second prompt

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -1,7 +1,8 @@
 set -g default-terminal "screen-256color"
 set-option -g default-command "reattach-to-user-namespace -l zsh"
-set-option -g automatic-rename off
+set-option -g allow-rename off
 set-option -g history-limit 5000
+set-window-option -g xterm-keys on
 
 set -g base-index 1
 set -g pane-base-index 1
@@ -65,8 +66,10 @@ bind - split-window -v
 
 source "$POWERLINE_PATH/bindings/tmux/powerline.conf"
 
-set-window-option -g window-style 'bg=#181818'
-set-window-option -g window-active-style 'bg=black'
+set-window-option -g window-style "bg=#181818"
+set-window-option -g window-active-style "bg=black"
+#set-window-option -g window-style $TMUX_WINDOW_STYLE
+#set-window-option -g window-active-style $TMUX_ACTIVE_WINDOW_STYLE
 bind-key -T root WheelUpPane if-shell -F -t = "#{alternate_on}" "send-keys -M" "select-pane -t =; copy-mode -e; send-keys -M"
 bind-key -T root WheelDownPane if-shell -F -t = "#{alternate_on}" "send-keys -M" "select-pane -t =; send-keys -M"
 bind-key -t vi-copy WheelUpPane halfpage-up
