--- a/.tmux.conf
+++ b/.tmux.conf
@@ -15,6 +15,7 @@ unbind Up
 unbind Down
 unbind Right
 unbind Left
+unbind c
 
 bind Escape copy-mode
 #setw -g mode-mouse on
@@ -44,6 +45,9 @@ bind h select-pane -L
 bind j select-pane -D
 bind k select-pane -U
 bind l select-pane -R
+
+bind g list-sessions
+
 #bind-key -r C-h select-window -t :-
 #bind-key -r C-l select-window -t :+
 
