Made tmux movement keys repeatable

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -41,10 +41,10 @@ set -g status-interval 2
 
 bind-key n new-window
 bind-key -r s select-pane -t :.+
-bind h select-pane -L
-bind j select-pane -D
-bind k select-pane -U
-bind l select-pane -R
+bind -r h select-pane -L
+bind -r j select-pane -D
+bind -r k select-pane -U
+bind -r l select-pane -R
 
 bind g list-sessions
 
