Darkened unfocused panes

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -70,7 +70,7 @@ bind - split-window -v
 
 source "$POWERLINE_PATH/bindings/tmux/powerline.conf"
 
-set-window-option -g window-style "bg=#181818"
+set-window-option -g window-style "bg=#0f0f0f"
 set-window-option -g window-active-style "bg=black"
 #set-window-option -g window-style $TMUX_WINDOW_STYLE
 #set-window-option -g window-active-style $TMUX_ACTIVE_WINDOW_STYLE
