--- a/.tmux.conf
+++ b/.tmux.conf
@@ -1,4 +1,5 @@
 set -g default-terminal "screen-256color"
+set -g escape-time 10
 set-option -g default-command "reattach-to-user-namespace -l zsh"
 set-option -g allow-rename off
 set-option -g history-limit 5000
