--- a/.tmux.conf
+++ b/.tmux.conf
@@ -48,6 +48,7 @@ bind -r k select-pane -U
 bind -r l select-pane -R
 
 bind g list-sessions
+bind v copy-mode
 
 #bind-key -r C-h select-window -t :-
 #bind-key -r C-l select-window -t :+
@@ -61,6 +62,8 @@ bind-key -r C-k resize-pane -U 5
 bind-key -r C-j resize-pane -D 5
 bind-key -r C-h resize-pane -L 5
 bind-key -r C-l resize-pane -R 5
+
+bind-key Q kill-session
 
 bind-key -r p next-window
 bind-key -r o previous-window
