--- a/.tmux.conf
+++ b/.tmux.conf
@@ -47,7 +47,7 @@ bind -r j select-pane -D
 bind -r k select-pane -U
 bind -r l select-pane -R
 
-bind g list-sessions
+#bind g list-sessions
 bind v copy-mode
 
 #bind-key -r C-h select-window -t :-
@@ -74,8 +74,8 @@ bind - split-window -v
 
 source "$POWERLINE_PATH/bindings/tmux/powerline.conf"
 
-set-window-option -g window-style "bg=#0f0f0f"
-set-window-option -g window-active-style "bg=black"
+#set-window-option -g window-style "bg=#0f0f0f"
+#set-window-option -g window-active-style "bg=black"
 #set-window-option -g window-style $TMUX_WINDOW_STYLE
 #set-window-option -g window-active-style $TMUX_ACTIVE_WINDOW_STYLE
 bind-key -T root WheelUpPane if-shell -F -t = "#{alternate_on}" "send-keys -M" "select-pane -t =; copy-mode -e; send-keys -M"
