--- a/applescripts/Click Top-most Notification.app/Contents/Info.plist
+++ b/applescripts/Click Top-most Notification.app/Contents/Info.plist
@@ -46,7 +46,7 @@
 		<key>savedFrame</key>
 		<string>76 490 700 672 0 0 1920 1177 </string>
 		<key>selectedTab</key>
-		<string>description</string>
+		<string>result</string>
 	</dict>
 </dict>
 </plist>
