Removed annoying bindings

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -17,6 +17,7 @@ unbind Down
 unbind Right
 unbind Left
 unbind c
+unbind !
 
 bind Escape copy-mode
 #setw -g mode-mouse on
@@ -28,6 +29,8 @@ set -g status-bg colour160
 set -g pane-border-bg colour236
 set -g pane-active-border-fg colour160
 set -g pane-active-border-bg colour236
+
+bind @ break-pane
 
 # act like vim
 # https://robots.thoughtbot.com/tmux-copy-paste-on-os-x-a-better-future
@@ -62,6 +65,8 @@ bind-key -r C-k resize-pane -U 5
 bind-key -r C-j resize-pane -D 5
 bind-key -r C-h resize-pane -L 5
 bind-key -r C-l resize-pane -R 5
+
+bind-key -r / swap-pane
 
 bind-key Q kill-session
 
