--- a/.tmux.conf
+++ b/.tmux.conf
@@ -19,16 +19,16 @@ unbind Left
 unbind c
 unbind !
 
-bind Escape copy-mode
+#bind Escape copy-mode
 #setw -g mode-mouse on
 set-option -g -q mouse on
 set -g pane-base-index 1
-set -g status-fg colour255
-set -g status-bg colour160
-#set -g pane-border-fg colour255
-set -g pane-border-bg colour236
-set -g pane-active-border-fg colour160
-set -g pane-active-border-bg colour236
+#set -g status-fg colour255
+#set -g status-bg colour160
+#set -g pane-border-fg $TMUX_BORDER_FG
+set -g pane-border-bg $TMUX_BORDER_BG
+set -g pane-active-border-fg $TMUX_BORDER_FG_ACTIVE
+set -g pane-active-border-bg $TMUX_BORDER_BG_ACTIVE
 
 bind @ break-pane
 
@@ -77,6 +77,7 @@ bind-key r source-file ~/.tmux.conf \; display-message "Configuration reloaded"
 bind \ split-window -h
 bind - split-window -v
 
+#run-shell "powerline-daemon -q"
 source "$POWERLINE_PATH/bindings/tmux/powerline.conf"
 
 #set-window-option -g window-style "bg=#0f0f0f"
