tmux borders config via env

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -1,9 +1,13 @@
+# vi:syntax=sh
+
 set -g default-terminal "screen-256color"
 set -g escape-time 10
 set-option -g default-command "reattach-to-user-namespace -l zsh"
 set-option -g allow-rename off
 set-option -g history-limit 5000
 set-window-option -g xterm-keys on
+
+set-option -ga update-environment ' TMUX_BORDER_BG TMUX_BORDER_FG_ACTIVE TMUX_BORDER_FG TMUX_BORDER_FG_ACTIVE BACKGROUND BASE16-FLAVOR POWERLINE_CONFIG_OVERRIDES'
 
 set -g base-index 1
 set -g pane-base-index 1
@@ -26,9 +30,12 @@ set -g pane-base-index 1
 #set -g status-fg colour255
 #set -g status-bg colour160
 #set -g pane-border-fg $TMUX_BORDER_FG
-set -g pane-border-bg $TMUX_BORDER_BG
-set -g pane-active-border-fg $TMUX_BORDER_FG_ACTIVE
-set -g pane-active-border-bg $TMUX_BORDER_BG_ACTIVE
+#set -g pane-border-bg $TMUX_BORDER_BG
+if-shell "[[ -n $TMUX_BORDER_FG ]]" 'set -g pane-border-fg $TMUX_BORDER_FG' ''
+if-shell "[[ -n $TMUX_BORDER_BG ]]" 'set -g pane-border-bg $TMUX_BORDER_BG' ''
+if-shell "[[ -n $TMUX_BORDER_FG_ACTIVE ]]" 'set -g pane-active-border-fg $TMUX_BORDER_FG_ACTIVE' ''
+if-shell "[[ -n $TMUX_BORDER_BG_ACTIVE ]]" 'set -g pane-active-border-bg $TMUX_BORDER_BG_ACTIVE' ''
+#set -g pane-active-border-bg $TMUX_BORDER_BG_ACTIVE
 
 bind @ break-pane
 
@@ -45,6 +52,7 @@ set -g status-interval 2
 
 bind-key n new-window
 bind-key -r s select-pane -t :.+
+bind-key -r C-s select-pane -t :.+
 bind -r h select-pane -L
 bind -r j select-pane -D
 bind -r k select-pane -U
@@ -68,7 +76,7 @@ bind-key -r C-l resize-pane -R 5
 
 bind-key -r / swap-pane
 
-bind-key Q kill-session
+bind-key Q confirm-before -p "Kill session #S? (y/n)" kill-session
 
 bind-key -r p next-window
 bind-key -r o previous-window
