Removed powerline from tmux

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -9,9 +9,6 @@ set-window-option -g xterm-keys on
 
 set-option -ga update-environment ' TMUX_BORDER_BG TMUX_BORDER_FG_ACTIVE TMUX_BORDER_FG TMUX_BORDER_FG_ACTIVE BACKGROUND BASE16-FLAVOR POWERLINE_CONFIG_OVERRIDES'
 
-set -g base-index 1
-set -g pane-base-index 1
-
 if-shell "[[ -n $SSH_CONNECTION ]]" '' 'unbind C-b; set -g prefix C-s'
 #unbind C-b
 #set -g prefix C-s
@@ -26,7 +23,6 @@ unbind !
 #bind Escape copy-mode
 #setw -g mode-mouse on
 set-option -g -q mouse on
-set -g pane-base-index 1
 #set -g status-fg colour255
 #set -g status-bg colour160
 #set -g pane-border-fg $TMUX_BORDER_FG
@@ -52,11 +48,13 @@ set -g status-interval 2
 
 bind-key n new-window
 bind-key -r s select-pane -t :.+
-bind-key -r C-s select-pane -t :.+
-bind -r h select-pane -L
-bind -r j select-pane -D
-bind -r k select-pane -U
-bind -r l select-pane -R
+
+bind-key C-s send-prefix
+
+bind h select-pane -L
+bind j select-pane -D
+bind k select-pane -U
+bind l select-pane -R
 
 #bind g list-sessions
 bind v copy-mode
@@ -86,7 +84,7 @@ bind \ split-window -h
 bind - split-window -v
 
 #run-shell "powerline-daemon -q"
-source "$POWERLINE_PATH/bindings/tmux/powerline.conf"
+#source "$POWERLINE_PATH/bindings/tmux/powerline.conf"
 
 #set-window-option -g window-style "bg=#0f0f0f"
 #set-window-option -g window-active-style "bg=black"
@@ -95,3 +93,37 @@ source "$POWERLINE_PATH/bindings/tmux/powerline.conf"
 bind-key -T root WheelUpPane if-shell -F -t = "#{alternate_on}" "send-keys -M" "select-pane -t =; copy-mode -e; send-keys -M"
 bind-key -T root WheelDownPane if-shell -F -t = "#{alternate_on}" "send-keys -M" "select-pane -t =; send-keys -M"
 #set-window-option -g pane-active-border-style ''
+#
+
+set -g status-bg colour238
+set-option -g message-command-style fg=black,bg=yellow
+set-option -g message-style fg=yellow,bg=black
+
+#set-option -gw mode-style fg=black,bg=blue
+#
+setw -g window-status-current-format "#[fg=black,bg=colour3] #{window_index} #[fg=colour232,bold,bg=colour220]   #{?window_zoomed_flag,Z: ,}#{window_name}   #[bg=colour228] "
+setw -g window-status-format "#[fg=white,bg=colour234] #{window_index} #[fg=black,bg=colour243]   #{window_name}   #[bg=colour240] "
+
+setw -g window-status-activity-style bg=colour42,blink
+setw -g window-status-bell-style bg=colour42,blink,fg=red
+
+setw -g status-left '#[bg=white,fg=colour232,bold]#{?client_prefix,, #{session_name}  }#[default]#[bg=colour35,blink,fg=white,bold]#{?client_prefix, #{session_name}  ,}#[bg=colour248]#{?client_prefix,, }#[bg=colour243]#{?client_prefix,, }#[bg=colour41]#{?client_prefix, ,}#[bg=colour47]#{?client_prefix, ,}#[default]  '
+
+setw -g status-right '#[bg=colour88]#{?client_readonly, ,}#[bg=colour124]#{?client_readonly, ,}#[bg=red,bold,fg=white]#{?client_readonly, readonly ,}'
+
+#setw -g window-status-current-attr dim
+#setw -g window-status-attr reverse
+
+set -g pane-active-border-fg colour3
+#set -g pane-active-border-bg colour233
+set -g base-index 1
+set -g pane-base-index 1
+set-option -g renumber-windows on
+set-option -g status-position bottom
+set-option -g status-justify centre
+set-window-option -g monitor-activity on
+set-option -g visual-activity on
+set-option -g visual-bell off
+
+set -g clock-mode-colour colour3
+
