Replace powerline with own tmux statusline config

--- a/tmux/tmux.conf
+++ b/tmux/tmux.conf
@@ -1,7 +1,7 @@
 # vi:syntax=sh
 
 set -g default-terminal "screen-256color"
-set -g escape-time 10
+set -g escape-time 1
 set-option -g default-command "reattach-to-user-namespace -l zsh"
 set-option -g allow-rename off
 set-option -g history-limit 5000
@@ -101,13 +101,19 @@ set-option -g message-style fg=yellow,bg=black
 
 #set-option -gw mode-style fg=black,bg=blue
 #
-setw -g window-status-current-format "#[fg=black,bg=colour3] #{window_index} #[fg=colour232,bold,bg=colour220]   #{?window_zoomed_flag,Z: ,}#{window_name}   #[bg=colour228] "
-setw -g window-status-format "#[fg=white,bg=colour234] #{window_index} #[fg=black,bg=colour243]   #{window_name}   #[bg=colour240] "
+# @TODO: Find way to use output of ~/.dotfiles/tmux/window-status.zsh WITHOUT
+# having it invoked all the time. Maybe an env variable?
 
-setw -g window-status-activity-style bg=colour42,blink
-setw -g window-status-bell-style bg=colour42,blink,fg=red
+#setw -g window-status-format "#[fg=white,bg=colour234] #{window_index} #[fg=black,bg=colour228]#{?window_activity_flag, * ,}#[fg=black,bg=colour243]   #{window_name}   #[bg=colour240] #{?window_zoomed_flag,z, } "
+setw -g window-status-format "#[fg=white,bg=colour234] #{window_index} #[fg=black,bg=colour243]   #{window_name}   #[bg=colour240]#{?window_zoomed_flag, z , }#[default] "
+setw -g window-status-current-format "#[fg=black,bg=colour3] #{window_index} #[fg=colour232,bold,bg=colour220]   #{window_name}   #[bg=colour228]#{?window_zoomed_flag, z , }#[default] "
 
-setw -g status-left '#[bg=white,fg=colour232,bold]#{?client_prefix,, #{session_name}  }#[default]#[bg=colour35,blink,fg=white,bold]#{?client_prefix, #{session_name}  ,}#[bg=colour248]#{?client_prefix,, }#[bg=colour243]#{?client_prefix,, }#[bg=colour41]#{?client_prefix, ,}#[bg=colour47]#{?client_prefix, ,}#[default]  '
+setw -g window-status-activity-style bg=default,fg=default,blink
+setw -g window-status-bell-style bg=default,fg=red,blink
+
+setw -g status-left '#(~/.dotfiles/tmux/status-left.zsh)'
+
+#setw -g status-left '#[bg=white,fg=colour232,bold]#{?client_prefix,, #{session_name}  }#[default]#[bg=colour35,blink,fg=white,bold]#{?client_prefix, #{session_name}  ,}#[bg=colour248]#{?client_prefix,, }#[bg=colour243]#{?client_prefix,, }#[bg=colour41]#{?client_prefix, ,}#[bg=colour47]#{?client_prefix, ,}#[default]  '
 
 setw -g status-right '#[bg=colour88]#{?client_readonly, ,}#[bg=colour124]#{?client_readonly, ,}#[bg=red,bold,fg=white]#{?client_readonly, readonly ,}'
 
@@ -119,11 +125,12 @@ set -g pane-active-border-fg colour3
 set -g base-index 1
 set -g pane-base-index 1
 set-option -g renumber-windows on
-set-option -g status-position bottom
+set-option -g status-position top
 set-option -g status-justify centre
 set-window-option -g monitor-activity on
-set-option -g visual-activity on
+set-option -g visual-activity off
 set-option -g visual-bell off
 
 set -g clock-mode-colour colour3
 
+set -g status-left-length 100
