Tmux configuration lib

--- a/tmux/tmux.conf
+++ b/tmux/tmux.conf
@@ -44,7 +44,7 @@ unbind -t vi-copy Enter
 bind-key -t vi-copy Enter copy-pipe "reattach-to-user-namespace pbcopy"
 setw -g utf8 on
 
-set -g status-interval 2
+set -g status-interval 1
 
 bind-key n new-window
 bind-key -r s select-pane -t :.+
@@ -72,6 +72,8 @@ bind-key -r C-j resize-pane -D 5
 bind-key -r C-h resize-pane -L 5
 bind-key -r C-l resize-pane -R 5
 
+#bind-key -r ( switch-client -p
+#bind-key -r ) switch-client -n
 bind-key -r / swap-pane
 
 bind-key Q confirm-before -p "Kill session #S? (y/n)" kill-session
@@ -95,7 +97,7 @@ bind-key -T root WheelDownPane if-shell -F -t = "#{alternate_on}" "send-keys -M"
 #set-window-option -g pane-active-border-style ''
 #
 
-set -g status-bg colour238
+set -g status-bg colour235
 set-option -g message-command-style fg=black,bg=yellow
 set-option -g message-style fg=yellow,bg=black
 
@@ -112,10 +114,11 @@ setw -g window-status-activity-style bg=default,fg=default,blink
 setw -g window-status-bell-style bg=default,fg=red,blink
 
 setw -g status-left '#(~/.dotfiles/tmux/status-left.zsh)'
+setw -g status-right '#(~/.dotfiles/tmux/status-right.zsh)'
 
 #setw -g status-left '#[bg=white,fg=colour232,bold]#{?client_prefix,, #{session_name}  }#[default]#[bg=colour35,blink,fg=white,bold]#{?client_prefix, #{session_name}  ,}#[bg=colour248]#{?client_prefix,, }#[bg=colour243]#{?client_prefix,, }#[bg=colour41]#{?client_prefix, ,}#[bg=colour47]#{?client_prefix, ,}#[default]  '
 
-setw -g status-right '#[bg=colour88]#{?client_readonly, ,}#[bg=colour124]#{?client_readonly, ,}#[bg=red,bold,fg=white]#{?client_readonly, readonly ,}'
+#setw -g status-right '#[bg=colour88]#{?client_readonly, ,}#[bg=colour124]#{?client_readonly, ,}#[bg=red,bold,fg=white]#{?client_readonly, readonly ,}'
 
 #setw -g window-status-current-attr dim
 #setw -g window-status-attr reverse
@@ -134,3 +137,4 @@ set-option -g visual-bell off
 set -g clock-mode-colour colour3
 
 set -g status-left-length 100
+set -g status-right-length 80
