--- a/tmux/tmux.conf
+++ b/tmux/tmux.conf
@@ -107,8 +107,8 @@ set-option -g message-style fg=yellow,bg=black
 # having it invoked all the time. Maybe an env variable?
 
 #setw -g window-status-format "#[fg=white,bg=colour234] #{window_index} #[fg=black,bg=colour228]#{?window_activity_flag, * ,}#[fg=black,bg=colour243]   #{window_name}   #[bg=colour240] #{?window_zoomed_flag,z, } "
-setw -g window-status-format "#[fg=white,bg=colour234] #{window_index} #[fg=black,bg=colour243]   #{window_name}   #[bg=colour240]#{?window_zoomed_flag, z , }#[default] "
-setw -g window-status-current-format "#[fg=black,bg=colour3] #{window_index} #[fg=colour232,bold,bg=colour220]   #{window_name}   #[bg=colour228]#{?window_zoomed_flag, z , }#[default] "
+setw -g window-status-format "#[fg=colour0,bg=colour8] #{window_index} #[fg=black,bg=colour8]    #{window_name}   #[bg=colour8]#{?window_zoomed_flag, z ,   }#[default] "
+setw -g window-status-current-format "#[fg=black,bg=colour11] #{window_index} #[fg=colour232,bold,bg=colour3]    #{window_name}   #[bg=colour11]#{?window_zoomed_flag, z ,   }#[default] "
 
 setw -g window-status-activity-style bg=default,fg=default,blink
 setw -g window-status-bell-style bg=default,fg=red,blink
