--- a/tmux/tmux.conf
+++ b/tmux/tmux.conf
@@ -138,3 +138,7 @@ set -g clock-mode-colour colour3
 
 set -g status-left-length 100
 set -g status-right-length 80
+
+set -g @plugin 'tmux-plugins/tmux-sessionist'
+# Initialize TMUX plugin manager (keep this line at the very bottom of tmux.conf)
+run '~/.tmux/plugins/tpm/tpm'
