--- a/tmux/tmux.conf
+++ b/tmux/tmux.conf
@@ -110,6 +110,9 @@ set-option -g message-style fg=yellow,bg=black
 setw -g window-status-format "#[fg=colour0,bg=colour8] #{window_index} #[fg=black,bg=colour8]    #{window_name}   #[bg=colour8]#{?window_zoomed_flag, z ,   }#[default] "
 setw -g window-status-current-format "#[fg=black,bg=colour11] #{window_index} #[fg=colour232,bold,bg=colour3]    #{window_name}   #[bg=colour11]#{?window_zoomed_flag, z ,   }#[default] "
 
+setw -g window-status-current-format "#[fg=colour11] #{window_index}: #{window_name} #{?window_zoomed_flag,⊙,} ❯"
+setw -g window-status-format "#[fg=colour8] #{window_index}: #{window_name} #{?window_zoomed_flag,⊙,} ❯"
+
 setw -g window-status-activity-style bg=default,fg=default,blink
 setw -g window-status-bell-style bg=default,fg=red,blink
 
