--- a/tmux/tmux.conf
+++ b/tmux/tmux.conf
@@ -132,7 +132,7 @@ set -g base-index 1
 set -g pane-base-index 1
 set-option -g renumber-windows on
 set-option -g status-position top
-set-option -g status-justify centre
+set-option -g status-justify left
 set-window-option -g monitor-activity on
 set-option -g visual-activity off
 set-option -g visual-bell off
