--- a/tmux/tmux.conf
+++ b/tmux/tmux.conf
@@ -9,7 +9,7 @@ set-window-option -g xterm-keys on
 
 set-option -ga update-environment ' TMUX_BORDER_BG TMUX_BORDER_FG_ACTIVE TMUX_BORDER_FG TMUX_BORDER_FG_ACTIVE BACKGROUND BASE16-FLAVOR POWERLINE_CONFIG_OVERRIDES'
 
-if-shell "[[ -n $SSH_CONNECTION ]]" '' 'unbind C-b; set -g prefix C-s'
+if-shell "[[ -n $SSH_CONNECTION ]]" '' 'unbind C-b; set -g prefix C-Space; set -g prefix2 C-s'
 #unbind C-b
 #set -g prefix C-s
 
@@ -33,7 +33,6 @@ if-shell "[[ -n $TMUX_BORDER_FG_ACTIVE ]]" 'set -g pane-active-border-fg $TMUX_B
 if-shell "[[ -n $TMUX_BORDER_BG_ACTIVE ]]" 'set -g pane-active-border-bg $TMUX_BORDER_BG_ACTIVE' ''
 #set -g pane-active-border-bg $TMUX_BORDER_BG_ACTIVE
 
-bind @ break-pane
 
 # act like vim
 # https://robots.thoughtbot.com/tmux-copy-paste-on-os-x-a-better-future
@@ -145,3 +144,5 @@ set -g status-right-length 80
 set -g @plugin 'tmux-plugins/tmux-sessionist'
 # Initialize TMUX plugin manager (keep this line at the very bottom of tmux.conf)
 run '~/.tmux/plugins/tpm/tpm'
+
+bind @ break-pane
