Open splits on current directory

--- a/tmux/tmux.conf
+++ b/tmux/tmux.conf
@@ -81,8 +81,8 @@ bind-key -r p next-window
 bind-key -r o previous-window
 unbind-key r
 bind-key r source-file ~/.tmux.conf \; display-message "Configuration reloaded"
-bind \ split-window -h
-bind - split-window -v
+bind \ split-window -h -c '#{pane_current_path}'
+bind - split-window -v -c '#{pane_current_path}'
 
 #run-shell "powerline-daemon -q"
 #source "$POWERLINE_PATH/bindings/tmux/powerline.conf"
