display-panes-time now 3 secs

--- a/tmux/tmux.conf
+++ b/tmux/tmux.conf
@@ -136,6 +136,8 @@ set-window-option -g monitor-activity on
 set-option -g visual-activity off
 set-option -g visual-bell off
 
+set -g display-panes-time 3000
+
 set -g clock-mode-colour colour3
 
 set -g status-left-length 100
