--- a/tmux/tmux.conf
+++ b/tmux/tmux.conf
@@ -71,6 +71,9 @@ bind-key -r C-j resize-pane -D 5
 bind-key -r C-h resize-pane -L 5
 bind-key -r C-l resize-pane -R 5
 
+bind-key c-w command-prompt -p "Swap with window: " "swap-window -t %1"
+bind-key m choose-window -F "#{window_index}: #{window_name}" "join-pane -h -t %%"
+bind-key M choose-window -F "#{window_index}: #{window_name}" "join-pane -v -t %%"
 #bind-key -r ( switch-client -p
 #bind-key -r ) switch-client -n
 bind-key -r / swap-pane
@@ -148,3 +151,4 @@ set -g @plugin 'tmux-plugins/tmux-sessionist'
 run '~/.tmux/plugins/tpm/tpm'
 
 bind @ break-pane
+set-option -g display-time 3000
