--- a/tmux/tmux.conf
+++ b/tmux/tmux.conf
@@ -24,7 +24,7 @@ unbind !
 #setw -g mode-mouse on
 set-option -g -q mouse on
 #set -g status-fg colour255
-#set -g status-bg colour160
+set -g status-bg black
 #set -g pane-border-fg $TMUX_BORDER_FG
 #set -g pane-border-bg $TMUX_BORDER_BG
 if-shell "[[ -n $TMUX_BORDER_FG ]]" 'set -g pane-border-fg $TMUX_BORDER_FG' ''
@@ -99,7 +99,8 @@ bind-key -T root WheelDownPane if-shell -F -t = "#{alternate_on}" "send-keys -M"
 #set-window-option -g pane-active-border-style ''
 #
 
-set -g status-bg colour235
+#set -g status-bg colour235
+#set -g status-bg black
 set-option -g message-command-style fg=black,bg=yellow
 set-option -g message-style fg=yellow,bg=black
 
