--- a/tmux/tmux.conf
+++ b/tmux/tmux.conf
@@ -101,10 +101,10 @@ bind-key -T root WheelDownPane if-shell -F -t = "#{alternate_on}" "send-keys -M"
 
 #set -g status-bg colour235
 #set -g status-bg black
-set-option -g message-command-style fg=black,bg=yellow
-set-option -g message-style fg=yellow,bg=black
+set-option -g message-command-style fg=colour29,bg=black
+set-option -g message-style fg=colour232,bold,bg=colour29
 
-#set-option -gw mode-style fg=black,bg=blue
+set-option -gw mode-style fg=white,bold,bg=colour29
 #
 # @TODO: Find way to use output of ~/.dotfiles/tmux/window-status.zsh WITHOUT
 # having it invoked all the time. Maybe an env variable?
@@ -113,8 +113,8 @@ set-option -g message-style fg=yellow,bg=black
 setw -g window-status-format "#[fg=colour0,bg=colour8] #{window_index} #[fg=black,bg=colour8]    #{window_name}   #[bg=colour8]#{?window_zoomed_flag, z ,   }#[default] "
 setw -g window-status-current-format "#[fg=black,bg=colour11] #{window_index} #[fg=colour232,bold,bg=colour3]    #{window_name}   #[bg=colour11]#{?window_zoomed_flag, z ,   }#[default] "
 
-setw -g window-status-current-format "#[fg=colour11] #{window_index}: #{window_name} #{?window_zoomed_flag,⊙,} ❯"
-setw -g window-status-format "#[fg=colour8] #{window_index}: #{window_name} #{?window_zoomed_flag,⊙,} ❯"
+setw -g window-status-current-format "#[bg=colour29] #{window_index}: #{window_name} #{?window_zoomed_flag,⊙,} "
+setw -g window-status-format "#[fg=colour29] #{window_index}: #{window_name} #{?window_zoomed_flag,⊙,} "
 
 setw -g window-status-activity-style bg=default,fg=default,blink
 setw -g window-status-bell-style bg=default,fg=red,blink
@@ -142,7 +142,7 @@ set-option -g visual-bell off
 
 set -g display-panes-time 3000
 
-set -g clock-mode-colour colour3
+set -g clock-mode-colour colour29
 
 set -g status-left-length 100
 set -g status-right-length 80
