--- a/tmux/tmux.conf
+++ b/tmux/tmux.conf
@@ -25,9 +25,11 @@ unbind !
 set-option -g -q mouse on
 #set -g status-fg colour255
 set -g status-bg black
+set -g pane-active-border-fg colour42
 #set -g pane-border-fg $TMUX_BORDER_FG
 #set -g pane-border-bg $TMUX_BORDER_BG
 if-shell "[[ -n $TMUX_BORDER_FG ]]" 'set -g pane-border-fg $TMUX_BORDER_FG' ''
+if-shell "[[ -n $TMUX_BG ]]" 'set -g status-bg $TMUX_BG' ''
 if-shell "[[ -n $TMUX_BORDER_BG ]]" 'set -g pane-border-bg $TMUX_BORDER_BG' ''
 if-shell "[[ -n $TMUX_BORDER_FG_ACTIVE ]]" 'set -g pane-active-border-fg $TMUX_BORDER_FG_ACTIVE' ''
 if-shell "[[ -n $TMUX_BORDER_BG_ACTIVE ]]" 'set -g pane-active-border-bg $TMUX_BORDER_BG_ACTIVE' ''
@@ -41,7 +43,7 @@ bind-key -t vi-copy v begin-selection
 bind-key -t vi-copy y copy-pipe "reattach-to-user-namespace pbcopy"
 unbind -t vi-copy Enter
 bind-key -t vi-copy Enter copy-pipe "reattach-to-user-namespace pbcopy"
-setw -g utf8 on
+#setw -g utf8 on
 
 set -g status-interval 1
 
@@ -111,9 +113,9 @@ set-option -gw mode-style fg=white,bold,bg=colour29
 
 #setw -g window-status-format "#[fg=white,bg=colour234] #{window_index} #[fg=black,bg=colour228]#{?window_activity_flag, * ,}#[fg=black,bg=colour243]   #{window_name}   #[bg=colour240] #{?window_zoomed_flag,z, } "
 setw -g window-status-format "#[fg=colour0,bg=colour8] #{window_index} #[fg=black,bg=colour8]    #{window_name}   #[bg=colour8]#{?window_zoomed_flag, z ,   }#[default] "
-setw -g window-status-current-format "#[fg=black,bg=colour11] #{window_index} #[fg=colour232,bold,bg=colour3]    #{window_name}   #[bg=colour11]#{?window_zoomed_flag, z ,   }#[default] "
+setw -g window-status-current-format "#[fg=black,bg=colour11] #{window_index} #[fg=white,bold,bg=colour3]    #{window_name}   #[bg=colour11]#{?window_zoomed_flag, z ,   }#[default] "
 
-setw -g window-status-current-format "#[bg=colour29] #{window_index}: #{window_name} #{?window_zoomed_flag,⊙,} "
+setw -g window-status-current-format "#[bg=colour29,fg=white] #{window_index}: #{window_name} #{?window_zoomed_flag,⊙,} "
 setw -g window-status-format "#[fg=colour29] #{window_index}: #{window_name} #{?window_zoomed_flag,⊙,} "
 
 setw -g window-status-activity-style bg=default,fg=default,blink
@@ -122,15 +124,9 @@ setw -g window-status-bell-style bg=default,fg=red,blink
 setw -g status-left '#(~/.dotfiles/tmux/status-left.zsh)'
 setw -g status-right '#(~/.dotfiles/tmux/status-right.zsh)'
 
-#setw -g status-left '#[bg=white,fg=colour232,bold]#{?client_prefix,, #{session_name}  }#[default]#[bg=colour35,blink,fg=white,bold]#{?client_prefix, #{session_name}  ,}#[bg=colour248]#{?client_prefix,, }#[bg=colour243]#{?client_prefix,, }#[bg=colour41]#{?client_prefix, ,}#[bg=colour47]#{?client_prefix, ,}#[default]  '
-
-#setw -g status-right '#[bg=colour88]#{?client_readonly, ,}#[bg=colour124]#{?client_readonly, ,}#[bg=red,bold,fg=white]#{?client_readonly, readonly ,}'
-
 #setw -g window-status-current-attr dim
 #setw -g window-status-attr reverse
 
-set -g pane-active-border-fg colour42
-#set -g pane-active-border-bg colour233
 set -g base-index 1
 set -g pane-base-index 1
 set-option -g renumber-windows on
