--- a/tmux/tmux.conf
+++ b/tmux/tmux.conf
@@ -115,13 +115,13 @@ set-option -gw mode-style fg=white,bold,bg=colour29
 setw -g window-status-format "#[fg=colour0,bg=colour8] #{window_index} #[fg=black,bg=colour8]    #{window_name}   #[bg=colour8]#{?window_zoomed_flag, z ,   }#[default] "
 setw -g window-status-current-format "#[fg=black,bg=colour11] #{window_index} #[fg=white,bold,bg=colour3]    #{window_name}   #[bg=colour11]#{?window_zoomed_flag, z ,   }#[default] "
 
-setw -g window-status-current-format "#[bg=colour29,fg=white] #{window_index}: #{window_name} #{?window_zoomed_flag,⊙,} "
-setw -g window-status-format "#[fg=colour29] #{window_index}: #{window_name} #{?window_zoomed_flag,⊙,} "
+setw -g window-status-current-format "#[bg=colour235,fg=white] #{window_index}: #{window_name} #{?window_zoomed_flag,⊙,} "
+setw -g window-status-format "#[fg=colour244] #{window_index}: #{window_name} #{?window_zoomed_flag,⊙,} "
 
 setw -g window-status-activity-style bg=default,fg=default,blink
 setw -g window-status-bell-style bg=default,fg=red,blink
 
-setw -g status-left '#(~/.dotfiles/tmux/status-left.zsh)'
+setw -g status-left '#[bg=colour24,bold]#{?client_prefix,, #{session_name} }#[bg=colour29,fg=white,bold]#{?client_prefix, #{session_name} ,}#[default]  '
 setw -g status-right '#(~/.dotfiles/tmux/status-right.zsh)'
 
 #setw -g window-status-current-attr dim
