--- a/tmux/tmux.conf
+++ b/tmux/tmux.conf
@@ -121,7 +121,7 @@ setw -g window-status-format "#[fg=colour244] #{window_index}: #{window_name} #{
 setw -g window-status-activity-style bg=default,fg=default,blink
 setw -g window-status-bell-style bg=default,fg=red,blink
 
-setw -g status-left '#[bg=colour24,bold]#{?client_prefix,, #{session_name} }#[bg=colour29,fg=white,bold]#{?client_prefix, #{session_name} ,}#[default]  '
+setw -g status-left '#[bg=colour24,fg=white,bold]#{?client_prefix,, #{session_name} }#[bg=colour29,fg=white,bold]#{?client_prefix, #{session_name} ,}#[default]  '
 setw -g status-right '#(~/.dotfiles/tmux/status-right.zsh)'
 
 #setw -g window-status-current-attr dim
