--- a/tmux/tmux.conf
+++ b/tmux/tmux.conf
@@ -111,9 +111,8 @@ set-option -gw mode-style fg=white,bold,bg=colour29
 # @TODO: Find way to use output of ~/.dotfiles/tmux/window-status.zsh WITHOUT
 # having it invoked all the time. Maybe an env variable?
 
-#setw -g window-status-format "#[fg=white,bg=colour234] #{window_index} #[fg=black,bg=colour228]#{?window_activity_flag, * ,}#[fg=black,bg=colour243]   #{window_name}   #[bg=colour240] #{?window_zoomed_flag,z, } "
 setw -g window-status-format "#[fg=colour0,bg=colour8] #{window_index} #[fg=black,bg=colour8]    #{window_name}   #[bg=colour8]#{?window_zoomed_flag, z ,   }#[default] "
-setw -g window-status-current-format "#[fg=black,bg=colour11] #{window_index} #[fg=white,bold,bg=colour3]    #{window_name}   #[bg=colour11]#{?window_zoomed_flag, z ,   }#[default] "
+setw -g window-status-current-format "#[fg=black,bg=colour11] #{window_index} #[fg=white,bold,bg=colour3]    #{window_name}   #[bg=colour11]#{?window_zoomed_flag, ⊙ ,   }#[default] "
 
 setw -g window-status-current-format "#[bg=colour235,fg=white] #{window_index}: #{window_name} #{?window_zoomed_flag,⊙,} "
 setw -g window-status-format "#[fg=colour244] #{window_index}: #{window_name} #{?window_zoomed_flag,⊙,} "
