--- a/tmux/tmux.conf
+++ b/tmux/tmux.conf
@@ -58,7 +58,7 @@ bind k select-pane -U
 bind l select-pane -R
 
 #bind g list-sessions
-bind v copy-mode
+bind Enter copy-mode
 
 #bind-key -r C-h select-window -t :-
 #bind-key -r C-l select-window -t :+
