--- a/tmux/tmux.conf
+++ b/tmux/tmux.conf
@@ -24,7 +24,7 @@ unbind !
 #setw -g mode-mouse on
 set-option -g -q mouse on
 #set -g status-fg colour255
-set -g status-bg black
+set -g status-bg default
 set -g pane-active-border-fg colour42
 #set -g pane-border-fg $TMUX_BORDER_FG
 #set -g pane-border-bg $TMUX_BORDER_BG
@@ -103,7 +103,7 @@ bind-key -T root WheelDownPane if-shell -F -t = "#{alternate_on}" "send-keys -M"
 
 #set -g status-bg colour235
 #set -g status-bg black
-set-option -g message-command-style fg=colour42,bg=black
+set-option -g message-command-style fg=colour42,bg=default
 set-option -g message-style fg=colour232,bold,bg=colour29
 
 set-option -gw mode-style fg=white,bold,bg=colour29
