--- a/.gitignore
+++ b/.gitignore
@@ -2,6 +2,6 @@ vim/plugged/*
 vim/viminfo*
 .DS_Store
 zsh/.zhistory
-zsh/.zcoredump
-zsh/.zcoredump.zwc
+zsh/.zcompdump
+zsh/.zcompdump.zwc
 zsh/.zcompcache
