--- a/.gitconfig
+++ b/.gitconfig
@@ -1,11 +1,35 @@
-[filter "lfs"]
-	clean = git-lfs clean %f
-	smudge = git-lfs smudge %f
-	required = true
 [user]
-	name = Bez Hermoso
-	email = bezalelhermoso@gmail.com
+  email = bezalelhermoso@gmail.com
+  signingkey = 55BDEC097B885413
+  name = Bez Hermoso
+
 [core]
-	editor = vim
-[push]
-	default = simple
+  editor = nvim
+
+[filter "lfs"]
+  clean = git-lfs clean %f
+  smudge = git-lfs smudge %f
+  required = true
+
+# neovim:
+[merge]
+  conflictstyle = diff3
+  tool = vimdiff
+
+[mergetool]
+  prompt = true
+	keepBackup = false
+
+[mergetool "vimdiff"]
+  cmd = nvim -d $BASE $LOCAL $REMOTE $MERGED -c '$wincmd w' -c 'wincmd J'
+
+[alias]
+  commits = commit -S
+
+# vim:
+#[merge]
+#  tool = vimdiff
+#  conflictstyle = diff3
+#
+#[mergetool]
+#  prompt = false
