Improved tmux statuslines.

--- a/tmux/tmux.conf
+++ b/tmux/tmux.conf
@@ -2,7 +2,7 @@
 
 set -g default-terminal "xterm-256color"
 set -g escape-time 1
-if-shell "[[ $OSTYPE == darwin* ]]" 'set-option -g default-command "reattach-to-user-namespace -l zsh"' ''
+if-shell 'test "$(uname)" = "Darwin"' 'set-option -g default-command "reattach-to-user-namespace -l zsh"' ''
 set-option -g allow-rename off
 set-option -g history-limit 50000
 set-option -gs history-file "~/.tmux-history.log"
@@ -112,13 +112,13 @@ set-option -gw mode-style fg=white,bold,bg=colour29
 # @TODO: Find way to use output of ~/.dotfiles/tmux/window-status.zsh WITHOUT
 # having it invoked all the time. Maybe an env variable?
 
-setw -g window-status-format "#[fg=colour244] #{window_index}: #{window_name} #{?window_zoomed_flag,⊙,} "
-setw -g window-status-current-format "#[bg=colour15,fg=colour244,bold] #{window_index}: #{window_name} #{?window_zoomed_flag,⊙,} "
+setw -g window-status-format "#[fg=colour244] #{window_index}: #{window_name} #{?window_zoomed_flag,⊙,} >"
+setw -g window-status-current-format "#[bg=colour15,fg=colour244,bold] #{window_index}: #{window_name} #{?window_zoomed_flag,⊙,} #[default]#[fg=colour15]>"
 
 setw -g window-status-activity-style bg=default,fg=default,blink
 setw -g window-status-bell-style bg=default,fg=red,blink
 
-setw -g status-left '#[bg=colour24,fg=white,bold]#{?client_prefix,, #{session_name} }#[bg=colour29,fg=white,bold]#{?client_prefix, #{session_name} ,}#[default]  '
+setw -g status-left '#[bg=colour24,fg=white,bold]#{?client_prefix,, #{session_name} }#[bg=colour29,fg=white,bold]#{?client_prefix, #{session_name} ,}#[default]#[fg=colour24,bold]#{?client_prefix,,>}#[fg=colour29,bold]#{?client_prefix,>,}  '
 setw -g status-right '#(~/.dotfiles/tmux/status-right.zsh)'
 
 #setw -g window-status-current-attr dim
