--- a/tmux/tmux.conf
+++ b/tmux/tmux.conf
@@ -112,8 +112,8 @@ set-option -gw mode-style fg=white,bold,bg=colour29
 # @TODO: Find way to use output of ~/.dotfiles/tmux/window-status.zsh WITHOUT
 # having it invoked all the time. Maybe an env variable?
 
-setw -g window-status-format "#[fg=colour244] #{window_index}: #{window_name} #{?window_zoomed_flag,⊙,} >"
-setw -g window-status-current-format "#[bg=colour15,fg=colour244,bold] #{window_index}: #{window_name} #{?window_zoomed_flag,⊙,} #[default]#[fg=colour15]>"
+setw -g window-status-format "#[fg=colour244] #{window_index}: #{window_name} #[fg=colour5]#{?window_zoomed_flag,●,} #[fg=colour244]>"
+setw -g window-status-current-format "#[bg=colour15,fg=colour244,bold] #{window_index}: #{window_name} #[fg=colour5]#{?window_zoomed_flag,●,} #[default]#[fg=colour15]>"
 
 setw -g window-status-activity-style bg=default,fg=default,blink
 setw -g window-status-bell-style bg=default,fg=red,blink
