tmux 2.3 & pane borders. Neat!

--- a/tmux/tmux.conf
+++ b/tmux/tmux.conf
@@ -121,6 +121,8 @@ setw -g window-status-bell-style bg=default,fg=red,blink
 setw -g status-left '#[bg=colour24,fg=white,bold]#{?client_prefix,, #{session_name} }#[bg=colour29,fg=white,bold]#{?client_prefix, #{session_name} ,}#[default]#[fg=colour24,bold]#{?client_prefix,,>}#[fg=colour29,bold]#{?client_prefix,>,}  '
 setw -g status-right '#(~/.dotfiles/tmux/status-right.zsh)'
 
+set -sg pane-border-format '#{?pane_active,#[reverse],#[fg=green]} #{pane_index} #[default]─[#{?pane_active,#[fg=colour6],} #{pane_title} #[default]]'
+
 #setw -g window-status-current-attr dim
 #setw -g window-status-attr reverse
 
@@ -143,6 +145,8 @@ set -g status-right-length 80
 set -g @plugin 'tmux-plugins/tmux-sessionist'
 # Initialize TMUX plugin manager (keep this line at the very bottom of tmux.conf)
 run '~/.tmux/plugins/tpm/tpm'
+
+set -g pane-border-status bottom
 
 bind @ break-pane
 set-option -g display-time 3000
