--- a/.gitconfig
+++ b/.gitconfig
@@ -7,9 +7,9 @@
   editor = nvim
 
 [filter "lfs"]
-  clean = git-lfs clean %f
-  smudge = git-lfs smudge %f
-  required = true
+	clean = git-lfs clean -- %f
+	smudge = git-lfs smudge -- %f
+	required = true
 
 # neovim:
 [merge]
