synchronize-panes binding & styling

--- a/tmux/tmux.conf
+++ b/tmux/tmux.conf
@@ -100,7 +100,8 @@ bind - split-window -v -c '#{pane_current_path}'
 bind-key -T root WheelUpPane if-shell -F -t = "#{alternate_on}" "send-keys -M" "select-pane -t =; copy-mode -e; send-keys -M"
 bind-key -T root WheelDownPane if-shell -F -t = "#{alternate_on}" "send-keys -M" "select-pane -t =; send-keys -M"
 #set-window-option -g pane-active-border-style ''
-#
+
+bind-key Y set-window-option synchronize-panes
 
 #set -g status-bg colour235
 #set -g status-bg black
@@ -113,12 +114,14 @@ set-option -gw mode-style fg=white,bold,bg=colour29
 # having it invoked all the time. Maybe an env variable?
 
 setw -g window-status-format "#[fg=colour244] #{window_index}: #{window_name} #[fg=colour5]#{?window_zoomed_flag,●,} #[fg=colour244]>"
-setw -g window-status-current-format "#[bg=colour15,fg=colour244,bold] #{window_index}: #{window_name} #[fg=colour5]#{?window_zoomed_flag,●,} #[default]#[fg=colour15]>"
+setw -g window-status-current-format "#[bg=colour3,fg=colour0]#{?pane_synchronized, ↔ ,}#[default]#[bg=colour15,fg=colour244,bold] #{window_index}: #{window_name} #[fg=colour5]#{?window_zoomed_flag,●,} #[default]#[fg=colour15]>"
 
 setw -g window-status-activity-style bg=default,fg=default,blink
 setw -g window-status-bell-style bg=default,fg=red,blink
 
-setw -g status-left '#[bg=colour24,fg=white,bold]#{?client_prefix,, #{session_name} }#[bg=colour29,fg=white,bold]#{?client_prefix, #{session_name} ,}#[default]#[fg=colour24,bold]#{?client_prefix,,>}#[fg=colour29,bold]#{?client_prefix,>,}  '
+
+setw -g status-left '#[fg=white,bold]#{?client_prefix,#[bg=colour29],#[bg=colour24]} #{session_name} #[default,bold]#{?client_prefix,#[fg=colour29],#[fg=colour24]}> '
+#setw -g status-left '#[bg=colour24,fg=white,bold]#{?client_prefix,, #{session_name} }#[bg=colour29,fg=white,bold]#{?client_prefix, #{session_name} ,}#[default]#[fg=colour24,bold]#{?client_prefix,,>}#[fg=colour29,bold]#{?client_prefix,>,}  '
 setw -g status-right '#(~/.dotfiles/tmux/status-right.zsh)'
 
 set -sg pane-border-format '#{?pane_active,#[reverse],#[fg=green]} #{pane_index} #[default]─[#{?pane_active,#[fg=colour6],} #{pane_title} #[default]]'
