--- a/tmux/tmux.conf
+++ b/tmux/tmux.conf
@@ -10,7 +10,7 @@ set-window-option -g xterm-keys on
 
 set-option -ga update-environment ' TMUX_BORDER_BG TMUX_BORDER_FG_ACTIVE TMUX_BORDER_FG TMUX_BORDER_FG_ACTIVE BACKGROUND BASE16-FLAVOR POWERLINE_CONFIG_OVERRIDES'
 
-if-shell "[[ -n $SSH_CONNECTION ]]" '' 'unbind C-b; set -g prefix C-Space; set -g prefix2 C-s'
+if-shell '[ -z "$SSH_TTY" ] && [ -z "$SSH_CLIENT" ] && [ -z "$SSH_CONNECTION" ]' 'unbind C-b; set -g prefix C-Space; set -g prefix2 C-s' '' 
 #unbind C-b
 #set -g prefix C-s
 
@@ -74,7 +74,7 @@ bind-key -r C-j resize-pane -D 5
 bind-key -r C-h resize-pane -L 5
 bind-key -r C-l resize-pane -R 5
 
-bind-key c-w command-prompt -p "Swap with window: " "swap-window -t %1"
+bind-key c-w choose-window -F "#{window_index}: #{window_name}" "swap-window -t %1"
 bind-key m choose-window -F "#{window_index}: #{window_name}" "join-pane -h -t %%"
 bind-key M choose-window -F "#{window_index}: #{window_name}" "join-pane -v -t %%"
 #bind-key -r ( switch-client -p
@@ -89,6 +89,8 @@ unbind-key r
 bind-key r source-file ~/.tmux.conf \; display-message "Configuration reloaded"
 bind \ split-window -h -c '#{pane_current_path}'
 bind - split-window -v -c '#{pane_current_path}'
+bind | split-window -fh -c '#{pane_current_path}' -p 33
+bind _ split-window -fv -c '#{pane_current_path}' -p 33
 
 #run-shell "powerline-daemon -q"
 #source "$POWERLINE_PATH/bindings/tmux/powerline.conf"
@@ -101,7 +103,7 @@ bind-key -T root WheelUpPane if-shell -F -t = "#{alternate_on}" "send-keys -M" "
 bind-key -T root WheelDownPane if-shell -F -t = "#{alternate_on}" "send-keys -M" "select-pane -t =; send-keys -M"
 #set-window-option -g pane-active-border-style ''
 
-bind-key Y set-window-option synchronize-panes
+bind-key & set-window-option synchronize-panes
 
 #set -g status-bg colour235
 #set -g status-bg black
@@ -113,18 +115,22 @@ set-option -gw mode-style fg=white,bold,bg=colour29
 # @TODO: Find way to use output of ~/.dotfiles/tmux/window-status.zsh WITHOUT
 # having it invoked all the time. Maybe an env variable?
 
-setw -g window-status-format "#[fg=colour244] #{window_index}: #{window_name} #[fg=colour5]#{?window_zoomed_flag,●,} #[fg=colour244]>"
-setw -g window-status-current-format "#[bg=colour3,fg=colour0]#{?pane_synchronized, ↔ ,}#[default]#[bg=colour15,fg=colour244,bold] #{window_index}: #{window_name} #[fg=colour5]#{?window_zoomed_flag,●,} #[default]#[fg=colour15]>"
+setw -g window-status-format \
+  "#[fg=colour244] #{window_index}: #{window_name} #[fg=colour5]#{?window_zoomed_flag,●,} #[fg=colour244]>"
+setw -g window-status-current-format \
+  "#[bg=colour3,fg=colour0]#{?pane_synchronized, ↔ ,}#[default]#[bg=colour15,fg=colour244,bold] #{window_index}: #{window_name} #[fg=colour5]#{?window_zoomed_flag,●,} #[default]#[fg=colour15]>"
 
 setw -g window-status-activity-style bg=default,fg=default,blink
 setw -g window-status-bell-style bg=default,fg=red,blink
 
 
-setw -g status-left '#[fg=white,bold]#{?client_prefix,#[bg=colour29],#[bg=colour24]} #{session_name} #[default,bold]#{?client_prefix,#[fg=colour29],#[fg=colour24]}> '
+setw -g status-left \
+  '#[fg=white,bold]#{?client_prefix,#[bg=colour29],#[bg=colour24]} #{session_name} #[default,bold]#{?client_prefix,#[fg=colour29],#[fg=colour24]}> '
 #setw -g status-left '#[bg=colour24,fg=white,bold]#{?client_prefix,, #{session_name} }#[bg=colour29,fg=white,bold]#{?client_prefix, #{session_name} ,}#[default]#[fg=colour24,bold]#{?client_prefix,,>}#[fg=colour29,bold]#{?client_prefix,>,}  '
 setw -g status-right '#(~/.dotfiles/tmux/status-right.zsh)'
 
-set -sg pane-border-format '#{?pane_active,#[reverse],#[fg=green]} #{pane_index} #[default]─[#{?pane_active,#[fg=colour6],} #{pane_title} #[default]]'
+set -sg pane-border-format \
+  '#{?pane_active,#[reverse],#[fg=green]} #{pane_index} #[default]─[#{?pane_active,#[fg=colour6],} #{pane_title} #[default]]'
 
 #setw -g window-status-current-attr dim
 #setw -g window-status-attr reverse
@@ -146,10 +152,12 @@ set -g status-left-length 100
 set -g status-right-length 80
 
 set -g @plugin 'tmux-plugins/tmux-sessionist'
+
 # Initialize TMUX plugin manager (keep this line at the very bottom of tmux.conf)
 run '~/.tmux/plugins/tpm/tpm'
 
-set -g pane-border-status bottom
+#set -g pane-border-status bottom
 
 bind @ break-pane
 set-option -g display-time 3000
+bind-key X confirm-before -p "Kill window #W? (y/n)" kill-window
