diff-so-fancy + pretty log

--- a/.gitconfig
+++ b/.gitconfig
@@ -5,6 +5,7 @@
 
 [core]
   editor = 'nvim'
+  pager = diff-so-fancy | less --tabs=4 -R
 
 [filter "lfs"]
   clean = git-lfs clean -- %f
@@ -29,7 +30,7 @@
   amends = commit -S --amend
   rebases = rebase -S
   diffw = diff --word-diff
-	plog = log --graph --pretty=format:'%Cred%h%Creset -%C(yellow)%d%Creset %s %Cgreen(%cr) %C(bold blue)<%an>%Creset' --abbrev-commit
+  plog = log --graph --pretty=format:'%Cred%h%Creset -%C(yellow)%d%Creset %s %Cgreen(%cr) %C(bold blue)<%an>%Creset' --abbrev-commit
 
 # vim:
 #[merge]
@@ -40,3 +41,12 @@
 #  prompt = false
 [gpg]
   program = gpg2
+[color "diff-highlight"]
+  oldHighlight = red bold 52
+  newNormal = green bold
+  newHighlight = green bold 22
+  oldNormal = red bold
+[diff-so-fancy]
+  changeHunkIndicators = true
+[commit]
+	gpgsign = true
