Simpler tmux style

--- a/tmux/tmux.conf
+++ b/tmux/tmux.conf
@@ -22,9 +22,8 @@ unbind c
 unbind !
 
 #bind Escape copy-mode
-#setw -g mode-mouse on
 set-option -g -q mouse on
-#set -g status-fg colour255
+
 set -g status-bg default
 set -g pane-active-border-fg colour42
 #set -g pane-border-fg $TMUX_BORDER_FG
@@ -36,6 +35,7 @@ if-shell "[[ -n $TMUX_BORDER_FG_ACTIVE ]]" 'set -g pane-active-border-fg $TMUX_B
 if-shell "[[ -n $TMUX_BORDER_BG_ACTIVE ]]" 'set -g pane-active-border-bg $TMUX_BORDER_BG_ACTIVE' ''
 #set -g pane-active-border-bg $TMUX_BORDER_BG_ACTIVE
 
+set -g pane-active-border-fg yellow
 
 # act like vim
 # https://robots.thoughtbot.com/tmux-copy-paste-on-os-x-a-better-future
@@ -107,30 +107,35 @@ bind-key & set-window-option synchronize-panes
 
 #set -g status-bg colour235
 #set -g status-bg black
-set-option -g message-command-style fg=colour42,bg=default
-set-option -g message-style fg=colour232,bold,bg=colour29
+set-option -g message-command-style fg=colour232,bg=green
+set-option -g message-style fg=green,bg=default,bold,underscore
 
-set-option -gw mode-style fg=white,bold,bg=colour29
+set-option -gw mode-style fg=colour232,bg=yellow
 #
 # @TODO: Find way to use output of ~/.dotfiles/tmux/window-status.zsh WITHOUT
 # having it invoked all the time. Maybe an env variable?
 
+#setw -g window-status-format \
+  #"#[fg=colour244] #{window_index}: #{window_name} #[fg=colour5]#{?window_zoomed_flag,●,} #[fg=colour244]>"
+
 setw -g window-status-format \
-  "#[fg=colour244] #{window_index}: #{window_name} #[fg=colour5]#{?window_zoomed_flag,●,} #[fg=colour244]>"
+  "#[fg=white,bold]#{window_name}#[default]"
+
 setw -g window-status-current-format \
-  "#[bg=colour3,fg=colour0]#{?pane_synchronized, ↔ ,}#[default]#[bg=colour15,fg=colour244,bold] #{window_index}: #{window_name} #[fg=colour5]#{?window_zoomed_flag,●,} #[default]#[fg=colour15]>"
+  "#[fg=red,underscore,bold]#{window_name}#[default]"
 
-setw -g window-status-activity-style bg=default,fg=default,blink
-setw -g window-status-bell-style bg=default,fg=red,blink
-
+setw -g window-status-separator "  "
 
 setw -g status-left \
-  '#[fg=white,bold]#{?client_prefix,#[bg=colour29],#[bg=colour24]} #{session_name} #[default,bold]#{?client_prefix,#[fg=colour29],#[fg=colour24]}> '
-#setw -g status-left '#[bg=colour24,fg=white,bold]#{?client_prefix,, #{session_name} }#[bg=colour29,fg=white,bold]#{?client_prefix, #{session_name} ,}#[default]#[fg=colour24,bold]#{?client_prefix,,>}#[fg=colour29,bold]#{?client_prefix,>,}  '
-setw -g status-right '#(~/.dotfiles/tmux/status-right.zsh)'
+  '#[bold]#{?client_prefix,#[bg=green],#[bg=default]}#{?client_prefix,#[fg=colour232],#[fg=yellow]} #{session_name} #[default,bold]#{?client_prefix,#[fg=green],#[fg=yellow]}>>  '
+
+setw -g status-right '#[bg=yellow,fg=colour232]#{?pane_synchronized, ↔ ,}#[default]#[bg=cyan,fg=colour232]#{?window_zoomed_flag, ● ,}#[default]'
 
 set -sg pane-border-format \
   '#{?pane_active,#[reverse],#[fg=green]} #{pane_index} #[default]─[#{?pane_active,#[fg=colour6],} #{pane_title} #[default]]'
+
+setw -g window-status-activity-style bg=default,fg=default,blink
+setw -g window-status-bell-style bg=default,fg=red,blink
 
 #setw -g window-status-current-attr dim
 #setw -g window-status-attr reverse
