--- a/tmux/tmux.conf
+++ b/tmux/tmux.conf
@@ -1,7 +1,7 @@
 # vi:syntax=sh
 
-set -g default-terminal "xterm-256color"
-set -g escape-time 1
+set-option -g default-terminal "xterm-256color"
+set-option -g escape-time 1
 if-shell 'test "$(uname)" = "Darwin"' 'set-option -g default-command "reattach-to-user-namespace -l zsh"' ''
 set-option -g allow-rename off
 set-option -g history-limit 50000
