[tmux] Window flags for zoom and sychronized panes & update to colors

--- a/tmux/tmux.conf
+++ b/tmux/tmux.conf
@@ -33,6 +33,7 @@ if-shell "[[ -n $TMUX_BORDER_FG_ACTIVE ]]" 'set -g pane-active-border-fg $TMUX_B
 if-shell "[[ -n $TMUX_BORDER_BG_ACTIVE ]]" 'set -g pane-active-border-bg $TMUX_BORDER_BG_ACTIVE' ''
 
 set -g pane-active-border-fg yellow
+set -g pane-border-fg colour8
 
 # act like vim
 # https://robots.thoughtbot.com/tmux-copy-paste-on-os-x-a-better-future
@@ -89,7 +90,7 @@ bind-key -T root WheelDownPane if-shell -F -t = "#{alternate_on}" "send-keys -M"
 
 bind-key & set-window-option synchronize-panes
 
-set-option -g message-command-style fg=colour232,bg=green
+set-option -g message-command-style fg=colour232,bg=green,bold
 set-option -g message-style fg=green,bg=default,bold,underscore
 
 set-option -gw mode-style fg=colour232,bg=yellow
@@ -98,14 +99,14 @@ setw -g window-status-format \
   "#[fg=white,bold]#{window_name}#[default]"
 
 setw -g window-status-current-format \
-  "#[fg=red,underscore,bold]#{window_name}#[default]"
+  "#[fg=yellow]#{?pane_synchronized,↔ ,}#[default]#[fg=red,underscore,bold]#{window_name}#[default]#[fg=colour8]#{?window_zoomed_flag, (z),}#[default]"
 
 setw -g window-status-separator "  "
 
 setw -g status-left \
   '#[bold]#{?client_prefix,#[bg=green],#[bg=default]}#{?client_prefix,#[fg=colour232],#[fg=yellow]} #{session_name} #[default,bold]#{?client_prefix,#[fg=green],#[fg=yellow]}>>  '
 
-setw -g status-right '#[bg=yellow,fg=colour232]#{?pane_synchronized, ↔ ,}#[default]#[bg=cyan,fg=colour232]#{?window_zoomed_flag, ● ,}#[default]'
+#setw -g status-right '#[bg=yellow,fg=colour232]#{?pane_synchronized, ↔ ,}#[default]#[bg=cyan,fg=colour232]#{?window_zoomed_flag, ● ,}#[default]'
 
 set -sg pane-border-format \
   '#{?pane_active,#[reverse],#[fg=green]} #{pane_index} #[default]─[#{?pane_active,#[fg=colour6],} #{pane_title} #[default]]'
