--- a/tmux/tmux.conf
+++ b/tmux/tmux.conf
@@ -2,17 +2,17 @@
 
 set-option -g default-terminal "xterm-256color"
 set-option -g escape-time 1
-if-shell 'test "$(uname)" = "Darwin"' 'set-option -g default-command "reattach-to-user-namespace -l zsh"' ''
+if-shell '[ -z "$SSH_TTY" ] && [ -z "$SSH_CLIENT" ] && [ -z "$SSH_CONNECTION" ]' 'unbind C-b; set -g prefix C-Space; set -g prefix2 C-s' '' 
+#if-shell 'test "$(uname)" = "Darwin"' 'set-option -g default-command "reattach-to-user-namespace -l zsh -"' ''
 set-option -g allow-rename off
 set-option -g history-limit 50000
 set-option -gs history-file "~/.tmux-history.log"
 set-window-option -g xterm-keys on
 
-set-option -ga update-environment ' TMUX_BORDER_BG TMUX_BORDER_FG_ACTIVE TMUX_BORDER_FG TMUX_BORDER_FG_ACTIVE BACKGROUND BASE16-FLAVOR POWERLINE_CONFIG_OVERRIDES'
+unbind-key r
+bind-key r source-file ~/.tmux.conf \; display-message "Configuration reloaded"
 
-if-shell '[ -z "$SSH_TTY" ] && [ -z "$SSH_CLIENT" ] && [ -z "$SSH_CONNECTION" ]' 'unbind C-b; set -g prefix C-Space; set -g prefix2 C-s' '' 
-#unbind C-b
-#set -g prefix C-s
+#set-option -ga update-environment ' TMUX_BORDER_BG TMUX_BORDER_FG_ACTIVE TMUX_BORDER_FG TMUX_BORDER_FG_ACTIVE BACKGROUND BASE16-FLAVOR POWERLINE_CONFIG_OVERRIDES'
 
 unbind Up
 unbind Down
@@ -21,43 +21,17 @@ unbind Left
 unbind c
 unbind !
 
-#bind Escape copy-mode
-set-option -g -q mouse on
-
-set -g status-bg default
-set -g pane-active-border-fg colour42
-if-shell "[[ -n $TMUX_BORDER_FG ]]" 'set -g pane-border-fg $TMUX_BORDER_FG' ''
-if-shell "[[ -n $TMUX_BG ]]" 'set -g status-bg $TMUX_BG' ''
-if-shell "[[ -n $TMUX_BORDER_BG ]]" 'set -g pane-border-bg $TMUX_BORDER_BG' ''
-if-shell "[[ -n $TMUX_BORDER_FG_ACTIVE ]]" 'set -g pane-active-border-fg $TMUX_BORDER_FG_ACTIVE' ''
-if-shell "[[ -n $TMUX_BORDER_BG_ACTIVE ]]" 'set -g pane-active-border-bg $TMUX_BORDER_BG_ACTIVE' ''
-
-set -g pane-active-border-fg yellow
-set -g pane-border-fg colour8
-
-# act like vim
-# https://robots.thoughtbot.com/tmux-copy-paste-on-os-x-a-better-future
-setw -g mode-keys vi
-bind-key -t vi-copy v begin-selection
-bind-key -t vi-copy y copy-pipe "reattach-to-user-namespace pbcopy"
-unbind -t vi-copy Enter
-bind-key -t vi-copy Enter copy-pipe "reattach-to-user-namespace pbcopy"
-#setw -g utf8 on
-
-set -g status-interval 10
-
-bind-key n new-window
 bind-key -r s select-pane -t :.+
 
-bind-key C-s send-prefix
+bind-key n new-window
 
+# Navigation
 bind h select-pane -L
 bind j select-pane -D
 bind k select-pane -U
 bind l select-pane -R
-
-bind Enter copy-mode
-
+bind-key -r p next-window
+bind-key -r o previous-window
 
 # Resize
 bind-key -r J resize-pane -D
@@ -69,32 +43,45 @@ bind-key -r C-j resize-pane -D 5
 bind-key -r C-h resize-pane -L 5
 bind-key -r C-l resize-pane -R 5
 
-bind-key c-w choose-window -F "#{window_index}: #{window_name}" "swap-window -t %1"
-bind-key m choose-window -F "#{window_index}: #{window_name}" "join-pane -h -t %%"
-bind-key M choose-window -F "#{window_index}: #{window_name}" "join-pane -v -t %%"
-bind-key -r / swap-pane
-
-bind-key Q confirm-before -p "Kill session #S? (y/n)" kill-session
-
-bind-key -r p next-window
-bind-key -r o previous-window
-unbind-key r
-bind-key r source-file ~/.tmux.conf \; display-message "Configuration reloaded"
+# Splitting
 bind \ split-window -h -c '#{pane_current_path}'
 bind - split-window -v -c '#{pane_current_path}'
 bind | split-window -fh -c '#{pane_current_path}' -p 33
 bind _ split-window -fv -c '#{pane_current_path}' -p 33
 
+set-option -g -q mouse on
 bind-key -T root WheelUpPane if-shell -F -t = "#{alternate_on}" "send-keys -M" "select-pane -t =; copy-mode -e; send-keys -M"
 bind-key -T root WheelDownPane if-shell -F -t = "#{alternate_on}" "send-keys -M" "select-pane -t =; send-keys -M"
 
-bind-key & set-window-option synchronize-panes
 
+
+# Copy mode
+setw -g mode-keys vi
+bind-key -T copy-mode-vi v send-keys -X begin-selection
+bind-key -T copy-mode-vi y send-keys -X copy-pipe-and-cancel "reattach-to-user-namespace pbcopy"
+bind-key -T copy-mode-vi Enter send-keys -X copy-pipe-and-cancel "reattach-to-user-namespace pbcopy"
+bind Enter copy-mode
+#bind Escape copy-mode
+#setw -g utf8 on
+
+
+# Basic styles
+set -g status-interval 10
+set -g status-bg default
+set -g pane-active-border-fg colour42
+set -g pane-active-border-fg yellow
+set -g pane-border-fg colour8
+#if-shell "[[ -n $TMUX_BORDER_FG ]]" 'set -g pane-border-fg $TMUX_BORDER_FG' ''
+#if-shell "[[ -n $TMUX_BG ]]" 'set -g status-bg $TMUX_BG' ''
+#if-shell "[[ -n $TMUX_BORDER_BG ]]" 'set -g pane-border-bg $TMUX_BORDER_BG' ''
+#if-shell "[[ -n $TMUX_BORDER_FG_ACTIVE ]]" 'set -g pane-active-border-fg $TMUX_BORDER_FG_ACTIVE' ''
+#if-shell "[[ -n $TMUX_BORDER_BG_ACTIVE ]]" 'set -g pane-active-border-bg $TMUX_BORDER_BG_ACTIVE' ''
 set-option -g message-command-style fg=colour232,bg=green,bold
 set-option -g message-style fg=green,bg=default,bold,underscore
 
 set-option -gw mode-style fg=colour232,bg=yellow
 
+#More advanced styles
 setw -g window-status-format \
   "#[fg=white,bold]#{window_name}#[default]"
 
@@ -111,9 +98,22 @@ setw -g status-left \
 set -sg pane-border-format \
   '#{?pane_active,#[reverse],#[fg=green]} #{pane_index} #[default]─[#{?pane_active,#[fg=colour6],} #{pane_title} #[default]]'
 
+
+#bind-key C-s send-prefix
+
+# Window Management
+bind-key c-w choose-window -F "#{window_index}: #{window_name}" "swap-window -t %1"
+bind-key m choose-window -F "#{window_index}: #{window_name}" "join-pane -h -t %%"
+bind-key M choose-window -F "#{window_index}: #{window_name}" "join-pane -v -t %%"
+bind-key -r / swap-pane
+bind-key & set-window-option synchronize-panes
+
+bind-key Q confirm-before -p "Kill session #S? (y/n)" kill-session
+
 setw -g window-status-activity-style bg=default,fg=default,blink
 setw -g window-status-bell-style bg=default,fg=red,blink
 
+# Numbers
 set -g base-index 1
 set -g pane-base-index 1
 set-option -g renumber-windows on
